--- a/MVVMPractice/View/MainWindow.xaml
+++ b/MVVMPractice/View/MainWindow.xaml
@@ -5,11 +5,20 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:MVVMPractice"
         xmlns:vm="clr-namespace:MVVMPractice.ViewModel"
+        xmlns:converter="clr-namespace:MVVMPractice.Converter"
         mc:Ignorable="d"
         Title="MainWindow" Height="350" Width="525">
 
     <Window.Resources>
         <vm:PersonViewModel x:Key="PersonViewModel"/>
+        <converter:DateConverter x:Key="MyDateConverter"/>
+        <Style TargetType="TextBox">
+            <Style.Triggers>
+                <Trigger Property="Validation.HasError" Value="True">
+                    <Setter Property="ToolTip" Value="{Binding RelativeSource={x:Static RelativeSource.Self}, Path=(Validation.Errors).CurrentItem.ErrorContent}"/>
+                </Trigger>
+            </Style.Triggers>
+        </Style>
     </Window.Resources>
 
     <Border Padding="2">
@@ -27,9 +36,9 @@
 
                 <StackPanel Grid.Column="1" >
                     <TextBox Width="200" HorizontalAlignment="Left" Margin="5" 
-                             Text="{Binding Person.FName, Mode=TwoWay}" />
+                             Text="{Binding Person.FName, Mode=TwoWay, ValidatesOnDataErrors=True}" />
                     <TextBox Width="200" HorizontalAlignment="Left" Margin="5"
-                             Text="{Binding Person.LName, Mode=TwoWay}" />
+                             Text="{Binding Person.LName, Mode=TwoWay, ValidatesOnDataErrors=True}" />
                     <Button Content="Submit" Width="100" Command="{Binding SubmitCommand}"
                             HorizontalAlignment="Left" Margin="5"/>
                 </StackPanel>
@@ -40,7 +49,7 @@
                         <GridViewColumn Header="First Name" DisplayMemberBinding="{Binding FName}" Width="Auto"/>
                         <GridViewColumn Header="Last Name" DisplayMemberBinding="{Binding LName}" Width="Auto"/>
                         <GridViewColumn Header="Full Name" DisplayMemberBinding="{Binding FullName}" Width="Auto"/>
-
+                        <GridViewColumn Header="Date Added" DisplayMemberBinding="{Binding DateAdded, Converter= {StaticResource MyDateConverter}}" Width="Auto"/>
                     </GridView>
                 </ListView.View>
             </ListView>
