--- a/MyWPFApp/MainWindow.xaml
+++ b/MyWPFApp/MainWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="MyWPFApp.MainWindow"
+﻿ <Window x:Class="MyWPFApp.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -118,6 +118,9 @@
 
             <Button Name="btnRoutedEvents" Content="Routed Events" FontWeight="Bold"  
                     Background="{StaticResource YellowBrush}"  Height="50" Width="150" Margin="20" Click="btnRoutedEvents_Click"/>
+
+            <Button Name="btnCustomDepProp" Content="Custom Dependency property" FontWeight="Bold"  
+                    Background="Coral"  Height="50" Width="190" Margin="20" Click="btnCustomDepProp_Click"/>
 
         </StackPanel>
     </Grid>
