--- a/MyWPFApp/MyRoutedEvents.xaml
+++ b/MyWPFApp/MyRoutedEvents.xaml
@@ -6,6 +6,7 @@
         xmlns:local="clr-namespace:MyWPFApp"
         mc:Ignorable="d"
         Title="MyRoutedEvents" Height="450" Width="800">
+    <StackPanel>
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition />
@@ -32,4 +33,7 @@
 
         
     </Grid>
+
+        <Button Name="BacktoMainWindow" Content="Go to Main Window" Width="130" Height="40"  Margin="5" Click="BacktoMainWindow_Click"/>
+    </StackPanel>
 </Window>
