--- a/MyWPFApp/App.xaml
+++ b/MyWPFApp/App.xaml
@@ -2,8 +2,21 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:MyWPFApp"
-             StartupUri="MainWindow.xaml">
+             StartupUri="MainWindow2.xaml">
     <Application.Resources>
-        <SolidColorBrush Color="Beige" x:Key="YellowBrush"/>
+        <ResourceDictionary>
+
+            <Style TargetType="Button" >
+                <Setter Property="Background" Value="BlanchedAlmond"/>
+            </Style>
+            
+            <SolidColorBrush Color="Beige" x:Key="YellowBrush"/>
+
+            <ResourceDictionary.MergedDictionaries>
+                <!--<ResourceDictionary Source="ResourceDictionaries/ButtonDictionary.xaml"/>-->
+                <ResourceDictionary Source="pack://application:,,,/WPFResources;component/ButtonDictionary.xaml"/>
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
+      
     </Application.Resources>
 </Application>
